--- a/SequenceOutput/SequenceOutput.csproj
+++ b/SequenceOutput/SequenceOutput.csproj
@@ -90,5 +90,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="TestData.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
